<resources>
    <string name="app_name">JumpaPwt</string>
    <string name="title_culinary">Kuliner</string>
    <string name="title_hotel">Hotel</string>
    <string name="title_favorites">Favorit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_nature">Alam</string>
    <string name="title_historic">Sejarah</string>
    <string name="tourism_photo">Foto Objek Wisata</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
nihil, eveniet aliquid culpa officia aut!</string>
    <string name="to_location">Ke Lokasi</string>
    <string name="failed_parsing">Style parsing failed</string>
    <string name="failed_style">"Can't find style. Error: "</string>
    <string name="add_favorite">Tambahkan Ke Favorit</string>
    <string name="app_mode">Mode Tampilan</string>
</resources>