<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_culinary"
        android:icon="@drawable/ic_culinary"
        android:title="@string/title_culinary" />

    <item
        android:id="@+id/navigation_hotel"
        android:icon="@drawable/ic_hotel"
        android:title="@string/title_hotel" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_nature"
        android:icon="@drawable/ic_nature"
        android:title="@string/title_nature" />

    <item
        android:id="@+id/navigation_historic"
        android:icon="@drawable/ic_historic"
        android:title="@string/title_historic" />


</menu>